# capitall

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
