[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capitall"
version = "0.1.0"
description = "Caption it all"
requires-python = ">=3.12"

dependencies = [
"torch",
"torchvision",
"pillow",
"numpy",
"pandas",
"matplotlib",
"transformers",
"num2words",
]

[project.optional-dependencies]
dev = [
]

[tool.hatch.build.targets.wheel]
packages = ["capitall"]



[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]


[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
